// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive pathways basic interactive-pathways component renders 1`] = `
<bolt-interactive-pathways>
  <div class="c-bolt-interactive-pathways"
       is="shadow-root"
  >
  </div>
</bolt-interactive-pathways>
`;

exports[`interactive pathways basic interactive-pathways component with the global \`no-shadow\` prop added 1`] = `
<bolt-interactive-pathways no-shadow>
  <div class="c-bolt-interactive-pathways"
       is="shadow-root"
  >
  </div>
</bolt-interactive-pathways>
`;

exports[`interactive pathways interactive-pathways with outer CSS class via Drupal Attributes 1`] = `
<bolt-interactive-pathways class="u-bolt-margin-top-medium">
  <div class="c-bolt-interactive-pathways"
       is="shadow-root"
  >
  </div>
</bolt-interactive-pathways>
`;
